fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-114-855686da78.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="url(/icons/image.png) repeat" h="50px" w="100px" />"
