fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-115-45d3f116b5.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="url(/icons/PatternIcon.svg) center 10% top 20% repeat" h="50px" w="100px" />"
