fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-116-23097e86ce.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="url(/icons/PatternIcon.svg) repeat" h="50px" w="100px" />"
