fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-117-fb967a9342.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="url(/icons/PatternIcon.svg) center 10% bottom 20% repeat" h="50px" w="100px" />"
