fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-118-b5cba733fa.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="linear-gradient(#F00, #F00), #0F0" h="50px" w="100px" />"
