fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-123-179129a02c.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

{
  "name": "Button",
  "node": {
    "children": [],
    "name": "Default",
    "parent": {
      "children": [
        [Circular],
        {
          "children": [],
          "name": "Hover",
          "parent": [Circular],
          "reactions": [
            {
              "actions": [],
              "trigger": {
                "type": "ON_HOVER",
              },
            },
          ],
          "type": "COMPONENT",
          "variantProperties": {
            "state": "hover",
          },
          "visible": true,
        },
      ],
      "componentPropertyDefinitions": {
        "state": {
          "type": "VARIANT",
          "variantOptions": [
            "default",
            "hover",
          ],
        },
      },
      "defaultVariant": [Circular],
      "name": "Button",
      "type": "COMPONENT_SET",
      "visible": true,
    },
    "reactions": [],
    "type": "COMPONENT",
    "variantProperties": {
      "state": "default",
    },
    "visible": true,
  },
  "tree": {
    "children": [],
    "component": "Box",
    "nodeName": "Default",
    "nodeType": "COMPONENT",
    "props": {
      "aspectRatio": undefined,
      "flex": undefined,
      "h": undefined,
      "maxH": undefined,
      "maxW": undefined,
      "minH": undefined,
      "minW": undefined,
      "w": undefined,
    },
  },
  "variantComments": {},
  "variants": {
    "state": "'default' | 'hover'",
  },
}
