fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-125-4a4a93c4c9.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

{
  "name": "Button",
  "node": {
    "children": [],
    "name": "Default",
    "parent": {
      "children": [
        [Circular],
        {
          "children": [],
          "name": "Hover",
          "parent": [Circular],
          "reactions": [],
          "type": "COMPONENT",
          "variantProperties": {
            "effect": "hover",
          },
          "visible": true,
        },
      ],
      "componentPropertyDefinitions": {
        "effect": {
          "type": "VARIANT",
          "variantOptions": [
            "default",
            "hover",
          ],
        },
      },
      "defaultVariant": [Circular],
      "name": "Button",
      "type": "COMPONENT_SET",
      "visible": true,
    },
    "reactions": [],
    "type": "COMPONENT",
    "variantProperties": {
      "effect": "default",
    },
    "visible": true,
  },
  "tree": {
    "children": [],
    "component": "Box",
    "nodeName": "Default",
    "nodeType": "COMPONENT",
    "props": {
      "aspectRatio": undefined,
      "flex": undefined,
      "h": undefined,
      "maxH": undefined,
      "maxW": undefined,
      "minH": undefined,
      "minW": undefined,
      "w": undefined,
    },
  },
  "variantComments": {},
  "variants": {},
}
