fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-128-2222304a14.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Box boxSize="100%">
  <Box />
  <Box opacity="0.8" />
</Box>"
