fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-129-7c97156f7f.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

{
  "name": "Card",
  "node": {
    "children": [],
    "name": "Default",
    "parent": {
      "children": [
        [Circular],
        {
          "children": [],
          "name": "Hover",
          "opacity": 0.8,
          "parent": [Circular],
          "reactions": [
            {
              "actions": [
                {
                  "transition": {
                    "duration": 0.3,
                    "easing": {
                      "type": "EASE_IN_OUT",
                    },
                    "type": "SMART_ANIMATE",
                  },
                  "type": "NODE",
                },
              ],
              "trigger": {
                "type": "ON_HOVER",
              },
            },
          ],
          "type": "COMPONENT",
          "variantProperties": {},
          "visible": true,
        },
      ],
      "componentPropertyDefinitions": {},
      "defaultVariant": [Circular],
      "name": "Card",
      "type": "COMPONENT_SET",
      "visible": true,
    },
    "reactions": [
      {
        "actions": [
          {
            "transition": {
              "duration": 0.3,
              "easing": {
                "type": "EASE_IN_OUT",
              },
              "type": "SMART_ANIMATE",
            },
            "type": "NODE",
          },
        ],
        "trigger": {
          "type": "ON_HOVER",
        },
      },
    ],
    "type": "COMPONENT",
    "variantProperties": {},
    "visible": true,
  },
  "tree": {
    "children": [],
    "component": "Box",
    "nodeName": "Default",
    "nodeType": "COMPONENT",
    "props": {
      "_hover": {
        "opacity": "0.8",
      },
      "aspectRatio": undefined,
      "flex": undefined,
      "h": undefined,
      "maxH": undefined,
      "maxW": undefined,
      "minH": undefined,
      "minW": undefined,
      "transition": "0.3ms ease-in-out",
      "transitionProperty": "opacity",
      "w": undefined,
    },
  },
  "variantComments": {},
  "variants": {},
}
